metadata/objects/fragment2_wide__c.object
<CustomObject>
    <fields>
        <fullName>Checkbox100__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox100</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox101__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox101</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox102__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox102</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula413__c</fullName>
        <formula>true</formula>
        <label>Formula413</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula414__c</fullName>
        <formula>true</formula>
        <label>Formula414</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula415__c</fullName>
        <formula>true</formula>
        <label>Formula415</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LongTextArea402__c</fullName>
        <label>LongTextArea402</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongTextArea403__c</fullName>
        <label>LongTextArea403</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongTextArea404__c</fullName>
        <label>LongTextArea404</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number201__c</fullName>
        <label>Number201</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number202__c</fullName>
        <label>Number202</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number203__c</fullName>
        <label>Number203</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>fragment2_wide</label>
    <nameField>
        <displayFormat>fragment2_wide-{0000000}</displayFormat>
        <label>fragment2_wide Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>fragment2_wides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>